# trade-sim

./: CMakeLists.txt  readme.MD
data/: output_1000_10_1000_0.json  output_1000_10_1000_1.json  output_1000_10_1000_CanOnlyReceiveAtZero.json  output_1000_10_1000_CantTradeAtZero.json  output_1000_10_100_0.json  output_1000_10_100_1.json  output_1000_10_100_CanOnlyReceiveAtZero.json  output_1000_10_100_CantTradeAtZero.json  output_1000_10_10_0.json  output_1000_10_10_1.json  output_100_10_1000_0.json  output_100_10_1000_1.json  output_100_10_1000_CanOnlyReceiveAtZero.json  output_100_10_1000_CantTradeAtZero.json  output_100_10_100_0.json  output_100_10_100_1.json  output_100_10_100_CanOnlyReceiveAtZero.json  output_100_10_100_CantTradeAtZero.json  output_100_10_10_0.json  output_100_10_10_1.json
include/: logger.hpp  simulation.hpp
scripts/: plot.py
src/: logger.cpp  main.cpp  simulation.cpp
